--- a/gitsearch-client/src/pages/search/search.module.css
+++ b/gitsearch-client/src/pages/search/search.module.css
@@ -1,12 +1,15 @@
 .searchContainer {
-    justify-content: stretch;
     align-items: stretch;
     display: flex;
     height: 100%;
+
 }
 
 .mainSearchMenu {
     width:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .resultContainer {
