--- a/gitsearch-client/src/index.css
+++ b/gitsearch-client/src/index.css
@@ -4,11 +4,18 @@ html, body, #root, .App {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Nunito-Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button:hover {
+  filter: brightness(85%);
+}
+button:active {
+  filter: brightness(75%);
 }
 
 code {
