--- a/gitsearch-client/src/components/Filter/Filter.module.css
+++ b/gitsearch-client/src/components/Filter/Filter.module.css
@@ -1,4 +1,17 @@
 .filterContainer {
     text-align: right;
-    margin-right: 2rem;
+
+}
+
+.dropdown {
+    height:2rem;
+}
+
+.filterButton {
+    color: white;
+    border: 0px;
+    background-color: var(--midnight-blue);
+    height:2rem;
+    width:2rem;
+    font-size: 1rem;
 }
