--- a/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
+++ b/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
@@ -1,6 +1,6 @@
 .filterMenuContainer {
     padding: 1rem;
-    border-left: 1px solid black;
+    border-left: 1px solid white;
     min-width:20%;
     overflow-y: scroll;
     text-align: left;
@@ -9,10 +9,17 @@
 .filter {
     display: flex;
     flex-direction: column;
-
     margin-bottom: 0.5rem;
 }
 
 .filterInput {
     width:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+}
+
+label {
+    margin-bottom: 0.5rem;
 }
