--- a/gitsearch-client/src/components/SearchBar/SearchBar.module.css
+++ b/gitsearch-client/src/components/SearchBar/SearchBar.module.css
@@ -1,15 +1,35 @@
 .searchBar {
     display: flex;
     justify-content: center;
-    width:100%;
-    height:2rem;
+    width: 100%;
+    height: 2rem;
     margin: 1rem;
 }
+
 .searchText {
- width:40%;
- max-width:40%;
+    outline: none;
+    width: 40%;
+    max-width: 40%;
+    border: 1px solid lightgray;
+    padding:2px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
+
+.searchText:focus {
+    border: 1px solid var(--comet-blue);
+}
+
 .searchButton {
-    width:20%;
-    max-width:20%;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    background-color: var(--comet-blue);
+    color: white;
+}
+
+.searchButton:disabled {
+    background-color: lightgray;
 }
