--- a/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
+++ b/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
@@ -1,11 +1,17 @@
 .filterMenuContainer {
     padding: 1rem;
-    border-left: 1px solid white;
+    border-right: 1px solid white;
     min-width:20%;
     overflow-y: scroll;
     text-align: left;
+    position: absolute;
+    z-index: 1;
+    transition: all 1s ease-in-out;
+    background: var(--midnight-blue);
 }
-
+.open {
+    
+}
 .filter {
     display: flex;
     flex-direction: column;
