--- a/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
+++ b/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
@@ -2,7 +2,7 @@
     padding: 1rem;
     border-right: 1px solid white;
     min-width:20%;
-    overflow-y: scroll;
+
     text-align: left;
     position: absolute;
     z-index: 1;
@@ -10,7 +10,7 @@
     background: var(--midnight-blue);
 }
 .open {
-    
+    overflow-y: scroll;
 }
 .filter {
     display: flex;
@@ -24,6 +24,12 @@
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 0.5rem;
+}
+
+.hamburgerMenu {
+    position: absolute;
+    top:2rem;
+    right:2rem;
 }
 
 label {
