--- a/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
+++ b/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
@@ -1,30 +1,51 @@
 .filterMenuContainer {
     padding: 1rem;
     border-right: 1px solid white;
-    min-width:20%;
+  
     height:100%;
     text-align: left;
     z-index: 1;
-    transition: all 1s ease-in-out;
+    transition: all 0.6s ease-in-out;
     background: var(--midnight-blue);
     transform: translateX(calc(-100% + 3rem));
+    position: absolute;
 }
-/*the bootstrap "small" px width*/
-@media screen and (max-width:1024px) {
-    .filterMenuContainer {
-        position: absolute;
-        right: 1rem;
-        font-size: 1rem;
-        width:100%;
-        background: transparent;
-        border: none;
-        color: white;
+
+@media screen and (min-width:1024px) {
+
+    .open {    
+        position: relative; }
+}
+
+@media screen and (min-width:576px) {
+    .open {
+        min-width:max(20%,320px);
     }
 }
+
+@media screen and (max-width:576px) {
+    .open {
+        position: absolute;
+    }
+    .filterMenuContainer {
+        position: absolute;
+        width:80%;
+    }
+}
+
 .open {
     transform: translateX(0px);
     overflow-y: scroll;
+
 }
+.open .mainMenu {
+    opacity:1;
+}
+
+.mainMenu {
+    opacity:0;
+}
+
 .filter {
     display: flex;
     flex-direction: column;
@@ -32,7 +53,7 @@
 }
 
 .filterInput {
-    width:100%;
+    margin-right:1rem;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -40,9 +61,15 @@
 }
 
 .hamburgerMenu {
-    position: fixed;
-    top:2rem;
-    right:2rem;
+    background-color: transparent;
+    border:none;
+    color: white;
+    font-size:1rem;
+}
+
+.topMenu {
+    display:flex;
+    justify-content: space-between;
 }
 
 label {
