--- a/gitsearch-client/src/pages/search/search.module.css
+++ b/gitsearch-client/src/pages/search/search.module.css
@@ -7,6 +7,7 @@
 
 .mainSearchMenu {
     width:100%;
+    transition: width 1s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
