--- a/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
+++ b/gitsearch-client/src/components/FilterMenu/FilterMenu.module.css
@@ -1,8 +1,8 @@
 .filterMenuContainer {
     padding: 1rem;
     border-right: 1px solid white;
-  
-    height:100%;
+
+    height: 100%;
     text-align: left;
     z-index: 1;
     transition: all 0.6s ease-in-out;
@@ -12,24 +12,22 @@
 }
 
 @media screen and (min-width:1024px) {
-
-    .open {    
-        position: relative; }
-}
-
-@media screen and (min-width:576px) {
     .open {
-        min-width:max(20%,320px);
+        position: relative;
     }
 }
-
+@media screen and (min-width:576px) {
+    .open {
+        width: max(20%, 320px);
+    }
+}
 @media screen and (max-width:576px) {
     .open {
         position: absolute;
     }
     .filterMenuContainer {
         position: absolute;
-        width:80%;
+        width: 80%;
     }
 }
 
@@ -38,12 +36,14 @@
     overflow-y: scroll;
 
 }
+
 .open .mainMenu {
-    opacity:1;
+    opacity: 1;
 }
 
 .mainMenu {
-    opacity:0;
+    transition: all 0.6s ease-in-out;
+    opacity: 0;
 }
 
 .filter {
@@ -53,8 +53,8 @@
 }
 
 .filterInput {
-    margin-right:1rem;
-    display:flex;
+    margin-right: 1rem;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 0.5rem;
@@ -62,13 +62,13 @@
 
 .hamburgerMenu {
     background-color: transparent;
-    border:none;
+    border: none;
     color: white;
-    font-size:1rem;
+    font-size: 1rem;
 }
 
 .topMenu {
-    display:flex;
+    display: flex;
     justify-content: space-between;
 }
 
